@@ -11,11 +11,13 @@
 
     <properties>
         <java.version>11</java.version>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
         <spring-boot.version>2.7.18</spring-boot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <lombok.version>1.18.30</lombok.version>
         <querydsl.version>5.0.0</querydsl.version>
         <h2.version>2.2.224</h2.version>
+
     </properties>
 
     <dependencyManagement>
@@ -108,14 +110,18 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+<!--                    <release>${java.version}</release> &lt;!&ndash; Вместо source и target &ndash;&gt;-->
                     <encoding>${project.build.sourceEncoding}</encoding>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.sql</arg>
+                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
-                        <!-- УБИРАЕМ QueryDSL ОТСЮДА! -->
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
@@ -137,7 +143,7 @@
                 </executions>
             </plugin>
 
-            <!-- QueryDSL плагин (правильная конфигурация) -->
+            <!-- QueryDSL плагин (исправленная конфигурация) -->
             <plugin>
                 <groupId>com.mysema.maven</groupId>
                 <artifactId>apt-maven-plugin</artifactId>
@@ -150,16 +156,10 @@
                         <configuration>
                             <outputDirectory>target/generated-sources/java</outputDirectory>
                             <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                            <!-- Добавляем зависимости в classpath процессора -->
-                            <classpathElements>
-                                <classpathElement>${com.querydsl:querydsl-apt:jar</classpathElement>
-                                <classpathElement>${javax.persistence:javax.persistence-api:jar</classpathElement>
-                            </classpathElements>
                         </configuration>
                     </execution>
                 </executions>
                 <dependencies>
-                    <!-- Явно добавляем зависимости для плагина -->
                     <dependency>
                         <groupId>com.querydsl</groupId>
                         <artifactId>querydsl-apt</artifactId>
